--- a/Final Project/Scripts/Exploring Relationships.ipynb
+++ b/Final Project/Scripts/Exploring Relationships.ipynb
@@ -112,6 +112,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cc371200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define columns\n",
+    "YEAR: NFL season\n",
+    "WEEK: Week of NFL season\n",
+    "Rank: Rank by fantasy points scored by position by week\n",
+    "Player: Player name\n",
+    "CMP: Number of pass completions\n",
+    "PASS ATT: Number of pass attempts\n",
+    "PCT: Completion percentage (CMP/PASS ATT)\n",
+    "PASS YDS: Number of passing yards (a player scores 1 fantasy point per 25 passing yards)\n",
+    "Y/A: Yards per attempt (PASS YDS/PASS ATT)\n",
+    "PASS TD: Number of passing touchdowns (a player scores 4 fantasy points per passing touchdowns)\n",
+    "INT: Number of interceptions (a player scores -2 fantasy points per interception)\n",
+    "SACKS: Number of sacks\n",
+    "RUSH ATT: Number of rush attempts \n",
+    "RUSH YDS: Number of rushing yards (a player receivers 1 fantasy point per 10 rushing yards)\n",
+    "RUSH TD: Number of rushing touchdowns (a player scores 6 fantasy points per rushing touchdowns)\n",
+    "FL: Fumbles lost (a player scores -2 fantasy points per fumble)\n",
+    "G: Games played\n",
+    "FPTS: Fantasy points"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "8556698b",
    "metadata": {},
@@ -654,6 +682,37 @@
    "source": [
     "#View columns\n",
     "df_rb.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81499959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define columns\n",
+    "YEAR: NFL season\n",
+    "WEEK: Week of NFL season\n",
+    "Rank: Rank by fantasy points scored by position by week\n",
+    "Player: Player name\n",
+    "ATT: Number of rush attempts \n",
+    "RUSH YDS: Number of rushing yards (a player receivers 1 fantasy point per 10 rushing yards)\n",
+    "Y/A: Yards per attempt (RUSH YDS/ATT)\n",
+    "LG: Longest rush\n",
+    "20+: Rushes of 20+ yards\n",
+    "RUSH TD: Number of rushing touchdowns (a player scores 6 fantasy points per rushing touchdowns)\n",
+    "REC: Receptions (a player scores 0 points per reception in Zero PPR, a player scores 0.5 points per reception in Half PPR, and a player scores 1 points per reception in One PPR)\n",
+    "TGT: Number of passing targets\n",
+    "REC YDS: Number of receiving yards (a player scores 1 fantasy point per 10 receiving yards)\n",
+    "Y/R: Yards per reception (REC YDS/REC)\n",
+    "REC TD: Number of receiving touchdowns (a player scores 6 fantasy points per receiving touchdowns)\n",
+    "FL: Fumbles lost (a player scores -2 fantasy points per fumble)\n",
+    "G: Games played\n",
+    "Zero PPR: Number of fantasy point scored in Zero PPR\n",
+    "Half PPR: Number of fantasy point scored in Half PPR\n",
+    "One PPR: Number of fantasy point scored in One PPR\n",
+    "#The various PPR styles represent different fantasy scoring styles that value receptions at varying amounts -- half PPR is the most popular"
    ]
   },
   {
@@ -1218,6 +1277,36 @@
    "source": [
     "#View columns\n",
     "df_wr.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147f1c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define columns\n",
+    "YEAR: NFL season\n",
+    "WEEK: Week of NFL season\n",
+    "Rank: Rank by fantasy points scored by position by week\n",
+    "Player: Player name\n",
+    "REC: Receptions (a player scores 0 points per reception in Zero PPR, a player scores 0.5 points per reception in Half PPR, and a player scores 1 points per reception in One PPR)\n",
+    "TGT: Number of passing targets\n",
+    "REC YDS: Number of receiving yards (a player scores 1 fantasy point per 10 receiving yards)\n",
+    "Y/R: Yards per reception (REC YDS/REC)\n",
+    "LG: Longest reception\n",
+    "20+: Receptions of 20+ yards\n",
+    "REC TD: Number of receiving touchdowns (a player scores 6 fantasy points per receiving touchdowns)\n",
+    "ATT: Number of rush attempts \n",
+    "RUSH YDS: Number of rushing yards (a player receivers 1 fantasy point per 10 rushing yards)\n",
+    "RUSH TD: Number of rushing touchdowns (a player scores 6 fantasy points per rushing touchdowns)\n",
+    "FL: Fumbles lost (a player scores -2 fantasy points per fumble)\n",
+    "G: Games played\n",
+    "Zero PPR: Number of fantasy point scored in Zero PPR\n",
+    "Half PPR: Number of fantasy point scored in Half PPR\n",
+    "One PPR: Number of fantasy point scored in One PPR\n",
+    "#The various PPR styles represent different fantasy scoring styles that value receptions at varying amounts -- half PPR is the most popular"
    ]
   },
   {
@@ -1829,6 +1918,36 @@
    "source": [
     "#View columns\n",
     "df_te.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fff867c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define columns\n",
+    "YEAR: NFL season\n",
+    "WEEK: Week of NFL season\n",
+    "Rank: Rank by fantasy points scored by position by week\n",
+    "Player: Player name\n",
+    "REC: Receptions (a player scores 0 points per reception in Zero PPR, a player scores 0.5 points per reception in Half PPR, and a player scores 1 points per reception in One PPR)\n",
+    "TGT: Number of passing targets\n",
+    "REC YDS: Number of receiving yards (a player scores 1 fantasy point per 10 receiving yards)\n",
+    "Y/R: Yards per reception (REC YDS/REC)\n",
+    "LG: Longest reception\n",
+    "20+: Receptions of 20+ yards\n",
+    "REC TD: Number of receiving touchdowns (a player scores 6 fantasy points per receiving touchdowns)\n",
+    "ATT: Number of rush attempts \n",
+    "RUSH YDS: Number of rushing yards (a player receivers 1 fantasy point per 10 rushing yards)\n",
+    "RUSH TD: Number of rushing touchdowns (a player scores 6 fantasy points per rushing touchdowns)\n",
+    "FL: Fumbles lost (a player scores -2 fantasy points per fumble)\n",
+    "G: Games played\n",
+    "Zero PPR: Number of fantasy point scored in Zero PPR\n",
+    "Half PPR: Number of fantasy point scored in Half PPR\n",
+    "One PPR: Number of fantasy point scored in One PPR\n",
+    "#The various PPR styles represent different fantasy scoring styles that value receptions at varying amounts -- half PPR is the most popular"
    ]
   },
   {
