--- a/Final Project/Scripts/Machine Learning Part 1.ipynb
+++ b/Final Project/Scripts/Machine Learning Part 1.ipynb
@@ -3976,11 +3976,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9ce798ac",
    "metadata": {},
    "source": [
-    "#### Interpretation: Strong, positive correlation between receiving touchdowns and tight end fantasy points"
+    "#### Interpretation: Strong, positive correlation between receiving touchdowns and tight end fantasy points but not accurate -- we see separate trend lines form around 0, 6, and 12 points – this is likely due to the impact scoring a touchdown has on fantasy scoring, as a touchdown is worth six points"
    ]
   },
   {
