--- a/Final Project/Scripts/Analyzing Time Series Data.ipynb
+++ b/Final Project/Scripts/Analyzing Time Series Data.ipynb
@@ -57,7 +57,8 @@
    "outputs": [],
    "source": [
     "#Import data\n",
-    "data = quandl.get('FRED/NROUST')"
+    "data = quandl.get('FRED/NROUST')\n",
+    "#Analyzing short-term rate of unemployment -- could not incorporate NFL analysis with time series accurately"
    ]
   },
   {
